--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://sidgore:ram123@cluster0.pmzjheb.mongodb.net/quit-smoking?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://sidgore:ram123@cluster0.pmzjheb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
